force-app/main/default/objects/Vehiculo_de_Carga__c/Vehiculo_de_Carga__c.object-meta.xml
<CustomObject>
    <label>Vehiculo de Carga</label>
    <nameField>
        <label>Vehiculo de Carga Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehiculos de Cargas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>