force-app/main/default/objects/Vehiculo_de_Carga__c/fields/Cantidad_de_Flota__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Flota__c</fullName>
    <label>Cantidad de Flota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>