force-app/main/default/objects/Vehiculo_de_Carga__c/fields/Precio_por_Kilometro__c.field-meta.xml
<CustomField>
    <fullName>Precio_por_Kilometro__c</fullName>
    <label>Precio por Kilometro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>