force-app/main/default/objects/Vehiculo_de_Carga__c/validationRules/Cantidad_de_Vehiculos_no_disponibles.validationRule-meta.xml
<ValidationRule>
    <fullName>Cantidad_de_Vehiculos_no_disponibles</fullName>
    <active>true</active>
    <errorConditionFormula>Cantidad_de_Flota__c &lt;0</errorConditionFormula>
    <errorDisplayField>Cantidad_de_Flota__c</errorDisplayField>
    <errorMessage>No Hay Vehiculos disponibles</errorMessage>
</ValidationRule>